--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <div class="gift-section">
             <h1 class="gift-title">希望妈妈每一天都像这样开心快乐 🥳</h1>
-            <h2 class="gift-hint">(移动鼠标查看礼物🎁)</h3>
+            <h2 class="gift-hint">(点击查看礼物🎁)</h3>
             <div class="gift-img" id="gift-img-happy1"></div>
             <div class="gift-img" id="gift-img-happy2"></div>
         </div>
