--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="header">
-            <h1 id="title">祝妈妈生日快乐！ 🎉</h1>
+            <h1 id="title">祝妈妈生日快乐！！！！ 🎉</h1>
             <img id="mom-img" src="images/profile.jpg">
             <h2 id="bday-date">2022.09.14</h2>
 
